# flanelly-project

./: .gitignore  Cargo.toml  README.md
examples/: const_prop_futile.while  const_prop_works.while  least_square_number.while  test1.while  test2.while
lab/: explanations.md  instructions.md
src/: aexp.rs  ast.rs  bexp.rs  cfg.rs  common.rs  interpreter.rs  lib.rs  main.rs  parser.rs  test-gen.rs
src/flow_analysis/: avail_exp.rs  common.rs  const_prop.rs  mfp.rs  mod.rs
tests/: tests.rs
tests-res/least_square_number/: ast.json  cfg.json  cfg_avail_exp.json  cfg_const_prop.json  eval.json  prog.while
tests-res/test1/: ast.json  cfg.json  cfg_avail_exp.json  cfg_const_prop.json  eval.json
tests-res/test_and_or/: ast.json  prog.while
