[package]
name = "flanelly"
version = "0.1.0"
authors = ["Lukas Convent <convent@isp.uni-luebeck.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
petgraph = { version = "0.5", features = ["serde-1"] }
vec1 = "1.6.0"
clap = "2.33"
itertools = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
test-generator = "0.3.0"